# cdtm-job

./: .env.example  .gitignore  LEARNINGS.md  README.md  main.py  pyproject.toml
backend/: .env.example  README.md  __init__.py  main.py  pyproject.toml
backend/api/: __init__.py  deps.py  error_handling.py  main.py  route_errors.py  settings.py
backend/api/routers/: companies.py  health.py  jobs.py  seekers.py
backend/api/schemas/: companies_public.py  health.py  jobs_public.py  seekers_public.py
backend/companies/: __init__.py
backend/companies/application/: commands.py  service.py
backend/companies/domain/: __init__.py  company.py
backend/companies/infrastructure/: __init__.py  repository.py
backend/companies/services/: __init__.py  commands.py  ports.py  service.py
backend/core/: __init__.py  errors.py  page.py  settings.py  supabase_client.py
backend/jobs/: __init__.py
backend/jobs/application/: commands.py  integration_config.py  service.py
backend/jobs/domain/: __init__.py  job.py
backend/jobs/infrastructure/: __init__.py  notifications.py  repository.py
backend/jobs/services/: __init__.py  commands.py  ports.py  service.py
backend/seekers/: __init__.py
backend/seekers/application/: service.py
backend/seekers/domain/: __init__.py  seeker.py
backend/seekers/infrastructure/: __init__.py  repository.py
backend/seekers/services/: __init__.py  commands.py  ports.py  service.py
frontend/: .env.example  README.md  TODO.md  openapi.json  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/jobs/: page.tsx
frontend/app/post-job/: actions.ts  page.tsx
frontend/app/seekers/: actions.ts  page.tsx
frontend/components/: home-video-backdrop.tsx  job-card.tsx  main-area.tsx  post-job-form.tsx  seeker-list-card.tsx  seeker-profile-form.tsx  site-footer.tsx  site-header.tsx
frontend/lib/: slug.ts
infrastructure/supabase/: README.md
supabase/: README.md  seed.sql
supabase/migrations/: 20260424100000_init_core.sql
tests/integration/: conftest.py  helpers.py  test_companies_crud.py  test_jobs_crud.py  test_seekers_crud.py
(+11 files in other folders)
