[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdtm-job"
version = "0.1.0"
description = "CDTM Job Board — monorepo (FastAPI backend, Supabase, frontend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "supabase",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests/integration"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: exercises live Supabase via API (requires SUPABASE_* env)",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]
