[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdtm-job-backend"
version = "0.1.0"
description = "CDTM Job Board API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "supabase",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "jobs", "companies", "seekers", "slack", "mail", "analytics"]

[tool.ruff]
line-length = 100
target-version = "py311"
